      rather than templates.dat.
    - Attempt to read cdebconf.conf configuration tags with quote-removal
      (strparsecword) and only try without quote-removal (strparsequoteword)
      if that fails. The strange function naming wasn't my idea ... Fixes
      incorrect parsing of stack driver parts of example cdebconf.conf.
    - Initialise next pointers in template/question stacks properly.

 -- Colin Watson <cjwatson@debian.org>  Tue, 11 Jan 2005 11:40:12 +0000

cdebconf (0.73) unstable; urgency=low

  * Colin Watson
    - Set NEWT_FLAG_RETURNEXIT on multiselect checkboxes (closes: #252751).
    - Fix compiler warning in text frontend.
    - gtk frontend work:
      + Set window title on GO.
      + Make cdebconf-gtk-udeb packaging work (still not built by default).
      + Make the Forward button the default widget, so that pressing Enter
        activates it.
    - Make the value of DEBCONF_OLD_FD_BASE available via the shell
      confmodule.
  * Updated translations:
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Finnish (fi.po) by Tapio Lehtonen
    - Hebrew (he.po) by Lior Kaplan
    - Hungarian (hu.po) by VEROK Istvan
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Russian L10N Team

 -- Colin Watson <cjwatson@debian.org>  Mon,  6 Dec 2004 10:54:47 +0000

cdebconf (0.72) unstable; urgency=low

  * Colin Watson
    - gtk frontend work (not built for sarge, so no risk):
      + Allocate choices, choices_translated, and defvals dynamically. Fixes
        several crash bugs.
      + Fix a type mismatch that generated a compiler warning.
      + Disable help popup on multiselects, since it made it impossible to
        actually select anything. Ditto on password keyboard focus grab.
      + Implement the text type, just as an alias of note for now.
      + Drop the old back/continue buttons entirely, as they only appear
        sometimes and having both them and the druid-style buttons is very