@@ -9,6 +9,7 @@ cdebconf (0.74) UNRELEASED; urgency=low
       if that fails. The strange function naming wasn't my idea ... Fixes
       incorrect parsing of stack driver parts of example cdebconf.conf.
     - Initialise next pointers in template/question stacks properly.
+    - Implement accept_types and reject_types in stack driver.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 11 Jan 2005 11:40:12 +0000
 
